--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-jest": "^22.4.4",
     "babel-preset-react": "^6.24.1",
-    "chromedriver": "^108.0.0",
+    "chromedriver": "109.0.0",
     "commitizen": "^4.2.6",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.1",
