chore(yaml): forgot to add permission for GH token

--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -4,6 +4,9 @@ on:
     branches:
     - 'main'
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions: write-all
+
 jobs:
   deployment:
     environment:
