--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -86,6 +86,6 @@ jobs:
         git config user.name "${GITHUB_ACTOR}"
         git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
     - run: npm install
-#    - run: npm run release
+    - run: npm run release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
