chore(merge): merge

--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
   "husky": {
     "hooks": {
       "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true",
-      "pre-commit": "enforce-branch-name '.*'",
+      "pre-commit": "npm run build && git add . && enforce-branch-name '.*'",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
